--- a/jmix-flowui/flowui/src/main/resources/io/jmix/flowui/messages.properties
+++ b/jmix-flowui/flowui/src/main/resources/io/jmix/flowui/messages.properties
@@ -52,3 +52,7 @@ validation.constraints.dateTimeRangeMaxExceeded=Value should be less than `${max
 
 entityLocked.title=Read only
 entityLocked.message=Record is locked by %s since %s
+
+mainScreen.title=Jmix Application
+mainScreen.applicationTitle.text=Jmix Application
+mainScreen.navigation.ariaLabel=Screens
