Flow UI MainScreen
- DrawerToggle

--- a/jmix-flowui/flowui/src/main/resources/io/jmix/flowui/messages.properties
+++ b/jmix-flowui/flowui/src/main/resources/io/jmix/flowui/messages.properties
@@ -56,3 +56,4 @@ entityLocked.message=Record is locked by %s since %s
 mainScreen.title=Jmix Application
 mainScreen.applicationTitle.text=Jmix Application
 mainScreen.navigation.ariaLabel=Screens
+mainScreen.drawerToggle.ariaLabel=Menu toggle
