Flow UI MainScreen
- LogoutButton

--- a/jmix-flowui/flowui/src/main/resources/io/jmix/flowui/messages.properties
+++ b/jmix-flowui/flowui/src/main/resources/io/jmix/flowui/messages.properties
@@ -57,3 +57,4 @@ mainScreen.title=Jmix Application
 mainScreen.applicationTitle.text=Jmix Application
 mainScreen.navigation.ariaLabel=Screens
 mainScreen.drawerToggle.ariaLabel=Menu toggle
+mainScreen.logoutButton.title=Logout
